--- a/app/src/main/res/layout/activity_list_online.xml
+++ b/app/src/main/res/layout/activity_list_online.xml
@@ -20,4 +20,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ImageView
+        android:id="@+id/dist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/ic_add_img" />
+
 </RelativeLayout>
