--- a/app/src/main/res/layout/activity_register_activity.xml
+++ b/app/src/main/res/layout/activity_register_activity.xml
@@ -5,32 +5,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".Register_activity"
     android:focusableInTouchMode="true"
     android:gravity="center"
-    android:layout_gravity="center"><!--
+    android:layout_gravity="center">
+    <!--
     <androidx.appcompat.widget.Toolbar
-    android:id="@+id/toolbar_log"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary"
-    android:minHeight="?attr/actionBarSize"
-    android:titleTextColor="@android:color/background_light"
-    app:title="Finder"
-    app:titleMargin="6dp"
-    app:titleTextColor="@android:color/background_light"/>-->
+        android:id="@+id/toolbar_reg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:titleTextColor="@android:color/background_light"
+        app:title="Finder"
+        app:titleMargin="6dp"
+        app:titleTextColor="@android:color/background_light"/>-->
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="2dp">
+        android:layout_marginTop="2dp"
+        android:id="@+id/scrll">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:paddingTop="20dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -42,9 +46,8 @@
                     style="@style/viewParent.headerText.NoMode"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:text="Having an\nAccount !!?\nPlease Login "
-                    android:textColor="@color/colorAccent"
-                    android:textStyle="bold"/>
+                    android:text="We\ncan fight\nwith corona\nand win! "
+                    android:textColor="@color/colorAccent" />
 
                 <ImageView
                     android:layout_width="180dp"
@@ -55,56 +58,86 @@
                     android:src="@drawable/people1" />
             </RelativeLayout>
 
-            <EditText
-                android:id="@+id/editTextEmail"
-                style="@style/modifiedEditText"
-                android:layout_marginTop="15sp"
-                android:hint="@string/login_email_hint"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/editTextPassword"
-                style="@style/modifiedEditText"
-                android:hint="@string/login_password_hint"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="24sp"/>
-
-            <TextView
-                android:id="@+id/reset_pass"
-                style="@style/viewParent"
-                android:layout_gravity="end"
-                android:layout_marginTop="10dp"
-                android:text="Forgot Password?"
-                android:textColor="@color/colorAccent"
-                android:textSize="12sp" />x
-
-            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
-                android:id="@+id/cirLoginButton"
-                style="@style/loginButton"
-                app:spinning_bar_width="4dp"
-                app:spinning_bar_color="#FFF"
-                android:text="Login"
-                android:layout_gravity="center_horizontal"
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                app:spinning_bar_padding="6dp"
-                app:initialCornerAngle="27dp"/>
+                app:cardBackgroundColor="@color/whiteTextColor"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="30dp">
 
-            <TextView
-                android:id="@+id/new_user"
-                style="@style/parent"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="@color/themeColor"
-                android:textSize="17sp"
-                android:text="New user? Register Now"
-                android:layout_marginTop="20dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/editTextName"
+                        style="@style/modifiedEditText"
+                        android:hint="Name"
+                        android:inputType="textPersonName"
+                        android:maxLines="1"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="15sp" />
+
+
+                    <EditText
+                        android:id="@+id/editTextEmail"
+                        style="@style/modifiedEditText"
+                        android:hint="@string/login_email_hint"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="15sp" />
+
+                    <EditText
+                        android:id="@+id/editTextMobile"
+                        style="@style/modifiedEditText"
+                        android:hint="Mobile Number"
+                        android:inputType="phone"
+                        android:maxLines="1"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="15sp" />
+
+                    <EditText
+                        android:id="@+id/editTextPassword"
+                        style="@style/modifiedEditText"
+                        android:hint="@string/login_password_hint"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="15sp" />
+
+                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
+                        android:id="@+id/cirRegisterButton"
+                        style="@style/loginButton"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="20dp"
+                        android:text="   Register Here   "
+                        app:initialCornerAngle="27dp"
+                        app:spinning_bar_color="#FFF"
+                        app:spinning_bar_padding="6dp"
+                        app:spinning_bar_width="4dp" />
+
+                    <TextView
+                        android:id="@+id/reg_log"
+                        style="@style/parent"
+                        android:layout_marginTop="20dp"
+                        android:text="Already have an account?"
+                        android:textAlignment="center"
+                        android:textColor="@color/themeColor"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -181,9 +214,18 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-
-
         </LinearLayout>
-    </RelativeLayout>
 
+    </ScrollView>
+
+    <ImageView
+        android:id="@+id/go_back_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="11dp"
+        android:layout_marginBottom="30dp"
+        android:adjustViewBounds="false"
+        android:src="@drawable/ic_back_img" />
 </RelativeLayout>
