--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="14dp"
     android:elevation="10dp"
-    android:layout_margin="16dp"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linear_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:clickable="true"
         android:orientation="horizontal"
-        android:padding="16dp"
+        android:padding="10sp"
         android:weightSum="10">
 
         <TextView
             android:id="@+id/txt_email"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="8"
-            android:text="Test ur email sir"
-            android:textSize="10sp" />
-
-        <ImageView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:clickable="true"
-            android:src="@drawable/red" />
+            android:layout_weight="8"
+            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:text="Test ur email sir"
+            android:textColor="@color/black"
+            android:textSize="16dp" />
 
     </LinearLayout>
 
